--- a/module1/lesson8-variables-and-data-types/index.html
+++ b/module1/lesson8-variables-and-data-types/index.html
@@ -7,38 +7,50 @@
 <body>
     <h1>Lesson 8: Variables and Data Types</h1>
     <script>
-        var age; // khai báo biến
-        age = 29; // Gán giá trị cho biến age, 29 là số nguyên, = toán tử gán
-        var anh = 29;
-        var em = 28;
+        // var age; // khai báo biến
+        // age = 29; // Gán giá trị cho biến age, 29 là số nguyên, = toán tử gán
+        // var anh = 29;
+        // var em = 28;
         // console.log(anh == em);
         // console.log(true && true);
         // console.log(true && (anh === em));
         // console.log(true || (anh === em));
         // console.log(!(anh === em));
         // console.log(age);
-        var firstName = "Anh";
-        var price = 1000.0; // number: float, double
-        var isMarried = true; // boolean: true/false
-        console.log(typeof anh);
-        console.log(typeof firstName);
-        console.log(typeof isMarried);
+        // var firstName = "Anh";
+        // var price = 1000.0; // number: float, double
+        // var isMarried = true; // boolean: true/false
+        // console.log(typeof anh);
+        // console.log(typeof firstName);
+        // console.log(typeof isMarried);
         // console.log(isMarried);
         // console.log(price);
         // console.log("Nguyễn Bá Tuấn " + firstName + ", tuổi " + age);
         // console.log(y);
         // var x = y = z = null; // khai báo nhiều biến trên cùng 1 dòng
-        x = 8; // number: integer
+        // x = 8; // number: integer
         // x = x + 2;
         // x += 2;
         // x %= 2;
-        y = +"2"; // number: integer
+        // y = +"2"; // number: integer
         // console.log(x + y); // 82
         // z = ++x + y; // x + y là một biểu thức
         // console.log(z); // 11
         // console.log(x); // 10
         // console.log(z);
         // console.log(Boolean(x));
+
+        // Biến
+        // var: từ khóa khai báo biến đầu tiên
+        // let, const: từ phiên bản ES6 (năm 2015)
+        // console.log(5 == '5'); // true, === so sánh cả kiểu dữ liệu và giá trị
+        // console.log(typeof '5');
+
+        let x = 10;
+        let y = 20;
+        let z = x-- + y; // 10 + 20 = 31
+        console.log(z); // 30
+        console.log(x); // 11
     </script>
 </body>
 </html>
