--- a/module1/lesson10-conditional-2/viet-ma-sach.html
+++ b/module1/lesson10-conditional-2/viet-ma-sach.html
@@ -3,17 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Viết mã sạch</title>
+    <script>
+        // internal
+        // const number = +prompt("Nhập vào một số nguyên bất kỳ");
+        //
+        // function isEven(number) {
+        //     return number % 2 === 0;
+        // }
+        //
+        // if (isEven(number)) {
+        //     alert("Đây là số chẵn");
+        // } else {
+        //     alert("Đây là số lẻ");
+        // }
+
+        // function isLeapYear(year) {
+        //     let isLeapYear = false;
+        //     if (year % 4 === 0) {
+        //         if (year % 100 === 0) {
+        //             if (year % 400 === 0) {
+        //                 isLeapYear = true;
+        //             }
+        //         } else {
+        //             isLeapYear = true;
+        //         }
+        //     }
+        //     return isLeapYear;
+        // }
+        // if (isLeapYear(1900)) {
+        //     console.log("Yes");
+        // } else {
+        //     console.log("No");
+        // }
+
+        // const radius = +prompt("Nhập bán kính hình tròn: ");
+        // if (radius >= 0) {
+        //     var area = Math.PI * radius * radius;
+        //     console.log("Area is " + area);
+        // }
+    </script>
 </head>
 <body>
-<script>
-    // internal
-    const number = +prompt("Nhập vào một số nguyên bất kỳ");
-    const isEven = number % 2 === 0;
-    if (isEven) {
-        alert("Đây là số chẵn");
-    } else {
-        alert("Đây là số lẻ");
-    }
-</script>
 </body>
 </html>
