--- a/module1/lesson10-conditional-2/calculate-tax.html
+++ b/module1/lesson10-conditional-2/calculate-tax.html
@@ -36,7 +36,7 @@
     const LEVEL_4 = 3;
     function calculateTax() {
         let level = 0;
-        let tax = tax1 = tax2 = tax3 = tax4 = tax5 = tax6 = tax7 = 0;
+        let tax = 0;
         let total = 0;
         let nonTaxableIncome = 11_000_000;
         const income = parseInt(document.getElementById("income").value);
